--- a/package.json
+++ b/package.json
@@ -5,38 +5,42 @@
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 3000",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "test": "rimraf coverage && karma start",
-    "postinstall": "typings install"
+    "test": "rimraf coverage && karma start"
   },
   "devDependencies": {
-    "angular2-template-loader": "latest",
-    "awesome-typescript-loader": "latest",
-    "copy-webpack-plugin": "latest",
-    "css-loader": "latest",
-    "extract-text-webpack-plugin": "latest",
-    "file-loader": "latest",
-    "html-loader": "latest",
-    "html-webpack-plugin": "latest",
-    "istanbul-instrumenter-loader": "latest",
-    "jasmine-core": "latest",
-    "json-loader": "latest",
-    "karma": "latest",
-    "karma-coverage": "latest",
-    "karma-jasmine": "latest",
-    "karma-phantomjs-launcher": "latest",
-    "karma-sourcemap-loader": "latest",
-    "karma-webpack": "latest",
-    "node-sass": "latest",
-    "raw-loader": "latest",
-    "rimraf": "latest",
-    "sass-loader": "latest",
-    "source-map-loader": "latest",
-    "ts-helpers": "latest",
+    "@types/bootstrap": "^3.3.31",
+    "@types/core-js": "^0.9.32",
+    "@types/jasmine": "^2.2.33",
+    "@types/jquery": "^1.10.31",
+    "@types/node": "^6.0.38",
+    "angular2-template-loader": "^0.5.0",
+    "awesome-typescript-loader": "^2.2.1",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.24.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine-core": "^2.5.0",
+    "json-loader": "^0.5.4",
+    "karma": "^1.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "node-sass": "^3.8.0",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.0",
+    "source-map-loader": "^0.1.5",
+    "ts-helpers": "^1.1.1",
     "typescript": "2.0.0",
-    "typings": "latest",
-    "webpack": "latest",
-    "webpack-dev-server": "latest",
-    "webpack-merge": "latest"
+    "typings": "^1.3.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1",
+    "webpack-merge": "^0.14.1"
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.5",
