--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": [
+      "node",
+      "jasmine"
+    ]
   },
   "compileOnSave": false,
   "buildOnSave": false,
