--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,11 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "noEmitHelpers": true,
-    "strictNullChecks": false,
-    "baseUrl": "./src",
+    "removeComments": false,
+    "noImplicitAny": false,
     "lib": [
       "dom",
       "es6"
