--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.1",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
@@ -24,7 +24,7 @@
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.5.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
+    "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -37,27 +37,26 @@
     "source-map-loader": "^0.1.5",
     "ts-helpers": "^1.1.1",
     "typescript": "2.0.0",
-    "typings": "^1.3.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
     "bootstrap": "3.3.7",
     "bootstrap-sass": "3.3.7",
     "core-js": "2.4.1",
     "ie-shim": "0.1.0",
     "jquery": "3.1.0",
-    "ng2-translate": "2.4.2",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "ng2-translate": "2.4.3",
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "0.6.17"
   }
 }
