--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "angular2-webpack-seed",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 3000",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "test": "rimraf coverage && karma start"
+  },
+  "keywords": [
+    "angular2",
+    "webpack",
+    "typescript"
+  ],
+  "author": "Felix Gladisch <felix@felixgladisch.de>",
+  "homepage": "https://github.com/fgladisch/angular2-webpack-seed",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fgladisch/angular2-webpack-seed.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fgladisch/angular2-webpack-seed/issues"
   },
   "devDependencies": {
     "@types/bootstrap": "^3.3.31",
@@ -14,15 +28,15 @@
     "@types/jquery": "^1.10.31",
     "@types/node": "^6.0.38",
     "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^2.2.1",
+    "awesome-typescript-loader": "^2.2.4",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.5.0",
+    "jasmine-core": "^2.5.1",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
@@ -30,33 +44,33 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.10.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
     "ts-helpers": "^1.1.1",
     "typescript": "2.0.0",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1",
+    "webpack-dev-server": "^1.15.2",
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
     "bootstrap": "3.3.7",
     "bootstrap-sass": "3.3.7",
     "core-js": "2.4.1",
     "ie-shim": "0.1.0",
-    "jquery": "3.1.0",
-    "ng2-translate": "2.4.3",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "0.6.17"
+    "jquery": "^3.1.0",
+    "ng2-translate": "2.5.0",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.23"
   }
 }
