Folder for TS output; jQuery version fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Build folder
 /dist
 
-# TypeScript
-/src/**/*.js
-/src/**/*.js.map
+# TypeScript output folder
+/temp
 
 # Coverage report folder
 /coverage
