--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "bootstrap-sass": "3.3.7",
     "core-js": "2.4.1",
     "ie-shim": "0.1.0",
-    "jquery": "^3.1.1",
+    "jquery": "3.1.1",
     "ng2-translate": "2.5.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.25"
