--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 3000",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "test": "rimraf coverage && karma start"
+    "test": "karma start"
   },
   "keywords": [
     "angular2",
@@ -21,26 +21,40 @@
   "bugs": {
     "url": "https://github.com/fgladisch/angular2-webpack-seed/issues"
   },
+  "dependencies": {
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/http": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/router": "3.1.2",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.10",
+    "bootstrap": "4.0.0-alpha.5",
+    "core-js": "2.4.1",
+    "ie-shim": "0.1.0",
+    "ng2-translate": "3.1.3",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.26"
+  },
   "devDependencies": {
-    "@types/bootstrap": "^3.3.32",
     "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.5.35",
-    "@types/jquery": "^2.0.33",
-    "@types/node": "^6.0.45",
-    "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^2.2.4",
-    "copy-webpack-plugin": "^3.0.1",
+    "@types/jasmine": "^2.5.36",
+    "@types/node": "^6.0.46",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^2.2.1",
+    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "html-webpack-plugin": "^2.24.1",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
-    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
@@ -49,28 +63,10 @@
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
-    "ts-helpers": "^1.1.1",
-    "typescript": "2.0.3",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-merge": "^0.14.1"
-  },
-  "dependencies": {
-    "@angular/common": "2.0.2",
-    "@angular/compiler": "2.0.2",
-    "@angular/core": "2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/http": "2.0.2",
-    "@angular/platform-browser": "2.0.2",
-    "@angular/platform-browser-dynamic": "2.0.2",
-    "@angular/router": "3.0.2",
-    "bootstrap": "3.3.7",
-    "bootstrap-sass": "3.3.7",
-    "core-js": "2.4.1",
-    "ie-shim": "0.1.0",
-    "jquery": "3.1.1",
-    "ng2-translate": "2.5.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.25"
+    "ts-helpers": "^1.1.2",
+    "typescript": "2.0.6",
+    "webpack": "2.1.0-beta.27",
+    "webpack-dev-server": "2.1.0-beta.11",
+    "webpack-merge": "^0.15.0"
   }
 }
