--- a/package.json
+++ b/package.json
@@ -22,51 +22,51 @@
     "url": "https://github.com/fgladisch/angular2-webpack-seed/issues"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.13",
+    "@angular/common": "2.4.7",
+    "@angular/compiler": "2.4.7",
+    "@angular/core": "2.4.7",
+    "@angular/forms": "2.4.7",
+    "@angular/http": "2.4.7",
+    "@angular/platform-browser": "2.4.7",
+    "@angular/platform-browser-dynamic": "2.4.7",
+    "@angular/router": "3.4.7",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "2.4.1",
     "ie-shim": "0.1.0",
-    "ng2-translate": "4.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26"
+    "ng2-translate": "5.0.0",
+    "rxjs": "5.1.0",
+    "zone.js": "0.7.6"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.48",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^2.2.4",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
-    "jasmine-core": "^2.5.2",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.2.1",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "node-sass": "^3.13.0",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.2",
-    "source-map-loader": "^0.1.5",
-    "ts-helpers": "^1.1.2",
-    "typescript": "2.0.10",
-    "webpack": "2.1.0-beta.27",
-    "webpack-dev-server": "2.1.0-beta.11",
-    "webpack-merge": "^0.17.0"
+    "angular2-template-loader": "0.6.1",
+    "awesome-typescript-loader": "3.0.3",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "file-loader": "0.10.0",
+    "html-loader": "0.4.4",
+    "html-webpack-plugin": "2.28.0",
+    "jasmine-core": "2.5.2",
+    "json-loader": "0.5.4",
+    "karma": "1.3.0",
+    "karma-jasmine": "1.1.0",
+    "karma-mocha-reporter": "2.2.2",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "2.0.2",
+    "node-sass": "4.5.0",
+    "raw-loader": "0.5.1",
+    "rimraf": "2.5.4",
+    "sass-loader": "4.1.1",
+    "source-map-loader": "0.1.6",
+    "ts-helpers": "1.1.2",
+    "typescript": "2.1.6",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0",
+    "webpack-merge": "2.6.1"
   }
 }
