--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-webpack-seed",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 3000",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
@@ -22,51 +22,50 @@
     "url": "https://github.com/fgladisch/angular2-webpack-seed/issues"
   },
   "dependencies": {
-    "@angular/common": "2.4.7",
-    "@angular/compiler": "2.4.7",
-    "@angular/core": "2.4.7",
-    "@angular/forms": "2.4.7",
-    "@angular/http": "2.4.7",
-    "@angular/platform-browser": "2.4.7",
-    "@angular/platform-browser-dynamic": "2.4.7",
-    "@angular/router": "3.4.7",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
+    "@angular/common": "4.0.1",
+    "@angular/compiler": "4.0.1",
+    "@angular/core": "4.0.1",
+    "@angular/forms": "4.0.1",
+    "@angular/http": "4.0.1",
+    "@angular/platform-browser": "4.0.1",
+    "@angular/platform-browser-dynamic": "4.0.1",
+    "@angular/router": "4.0.1",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.22",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
-    "ie-shim": "0.1.0",
-    "ng2-translate": "5.0.0",
-    "rxjs": "5.1.0",
-    "zone.js": "0.7.6"
+    "rxjs": "5.2.0",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.35",
-    "@types/jasmine": "2.5.41",
-    "@types/node": "7.0.5",
+    "@types/core-js": "0.9.40",
+    "@types/jasmine": "2.5.47",
+    "@types/node": "7.0.12",
     "angular2-template-loader": "0.6.2",
-    "awesome-typescript-loader": "3.0.3",
+    "awesome-typescript-loader": "3.1.2",
     "copy-webpack-plugin": "4.0.1",
-    "css-loader": "0.26.1",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
-    "file-loader": "0.10.0",
-    "html-loader": "0.4.4",
+    "css-loader": "0.28.0",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.10.1",
+    "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
     "jasmine-core": "2.5.2",
     "json-loader": "0.5.4",
-    "karma": "1.3.0",
+    "karma": "1.5.0",
     "karma-jasmine": "1.1.0",
-    "karma-mocha-reporter": "2.2.2",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.2",
-    "node-sass": "4.5.0",
+    "karma-webpack": "2.0.3",
+    "node-sass": "4.5.2",
     "raw-loader": "0.5.1",
-    "rimraf": "2.5.4",
-    "sass-loader": "5.0.1",
-    "source-map-loader": "0.1.6",
+    "rimraf": "2.6.1",
+    "sass-loader": "6.0.3",
     "ts-helpers": "1.1.2",
-    "typescript": "2.1.6",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0",
-    "webpack-merge": "2.6.1"
+    "typescript": "2.2.2",
+    "webpack": "2.3.2",
+    "webpack-dev-server": "2.4.2",
+    "webpack-merge": "4.1.0"
   }
 }
