:rocket: feat/chore: angular 4.3, tslint, aot, webpack 3 and more

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
   "buildOnSave": false,
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "aot",
+    "src/main-aot.ts"
   ],
   "atom": {
     "rewriteTsconfig": false
