--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 3000",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "test": "karma start"
+    "test": "karma start",
+    "lint": "tslint 'src/**/*.ts' --type-check --project tsconfig.json",
+    "aot": "rimraf aot && ngc -p tsconfig-aot.json"
   },
   "keywords": [
     "angular2",
@@ -22,50 +24,55 @@
     "url": "https://github.com/fgladisch/angular2-webpack-seed/issues"
   },
   "dependencies": {
-    "@angular/common": "4.0.1",
-    "@angular/compiler": "4.0.1",
-    "@angular/core": "4.0.1",
-    "@angular/forms": "4.0.1",
-    "@angular/http": "4.0.1",
-    "@angular/platform-browser": "4.0.1",
-    "@angular/platform-browser-dynamic": "4.0.1",
-    "@angular/router": "4.0.1",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.22",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3",
-    "bootstrap": "4.0.0-alpha.6",
-    "core-js": "2.4.1",
-    "rxjs": "5.2.0",
-    "zone.js": "0.8.5"
+    "@angular/common": "4.3.5",
+    "@angular/compiler": "4.3.5",
+    "@angular/core": "4.3.5",
+    "@angular/forms": "4.3.5",
+    "@angular/http": "4.3.5",
+    "@angular/platform-browser": "4.3.5",
+    "@angular/platform-browser-dynamic": "4.3.5",
+    "@angular/router": "4.3.5",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.1",
+    "@ngx-translate/core": "7.2.0",
+    "@ngx-translate/http-loader": "1.0.2",
+    "bootstrap": "4.0.0-beta",
+    "core-js": "2.5.0",
+    "rxjs": "5.4.3",
+    "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.40",
-    "@types/jasmine": "2.5.47",
-    "@types/node": "7.0.12",
+    "@angular/compiler-cli": "4.3.5",
+    "@ngtools/webpack": "1.6.1",
+    "@types/core-js": "0.9.43",
+    "@types/jasmine": "2.5.54",
+    "@types/node": "8.0.24",
     "angular2-template-loader": "0.6.2",
-    "awesome-typescript-loader": "3.1.2",
+    "awesome-typescript-loader": "3.2.3",
+    "codelyzer": "3.1.2",
+    "compression-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.0.1",
-    "css-loader": "0.28.0",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.10.1",
-    "html-loader": "0.4.5",
-    "html-webpack-plugin": "2.28.0",
-    "jasmine-core": "2.5.2",
-    "json-loader": "0.5.4",
-    "karma": "1.5.0",
+    "css-loader": "0.28.5",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
+    "jasmine-core": "2.7.0",
+    "json-loader": "0.5.7",
+    "karma": "1.7.0",
     "karma-jasmine": "1.1.0",
     "karma-mocha-reporter": "2.2.3",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.3",
-    "node-sass": "4.5.2",
+    "karma-webpack": "2.0.4",
+    "node-sass": "4.5.3",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
-    "sass-loader": "6.0.3",
+    "sass-loader": "6.0.6",
     "ts-helpers": "1.1.2",
-    "typescript": "2.2.2",
-    "webpack": "2.3.2",
-    "webpack-dev-server": "2.4.2",
+    "tslint": "5.6.0",
+    "typescript": "2.4.2",
+    "webpack": "3.5.5",
+    "webpack-dev-server": "2.7.1",
     "webpack-merge": "4.1.0"
   }
 }
