fix: ignore main-aot.ts (expect when building), this fixes #2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "node_modules",
     "dist",
     "aot",
-    "src/main-aot.ts"
+    "/src/main-aot.ts"
   ],
   "atom": {
     "rewriteTsconfig": false
