--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-webpack-seed",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 3000",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
@@ -14,7 +14,8 @@
     "bootstrap",
     "karma",
     "jasmine",
-    "webpack"
+    "webpack",
+    "aot"
   ],
   "author": "Felix Gladisch <felix@felixgladisch.de>",
   "homepage": "https://github.com/fgladisch/angular2-webpack-seed",
@@ -62,9 +63,9 @@
     "jasmine-core": "2.8.0",
     "json-loader": "0.5.7",
     "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-jasmine": "1.1.0",
     "karma-mocha-reporter": "2.2.4",
-    "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.4",
     "node-sass": "4.5.3",
