--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ node_js:
 addons:
   chrome: stable
 
+before_install:
+  export CHROME_BIN="/usr/bin/google-chrome-stable"
+
 script:
   - npm test
   - npm run build
