--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+dist: trusty
+sudo: false
+
 language: node_js
 
 node_js:
@@ -7,9 +10,6 @@ addons:
   apt:
     packages:
       - google-chrome-stable
-
-# before_install:
-#   - export CHROME_BIN=/usr/bin/google-chrome
 
 script:
   - npm test
